tests/baselines/reference/internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts(13,22): error TS2339: Property 'b' does not exist on type 'typeof c'.


==== internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export namespace a {
        export namespace b {
            export class c {
            }
        }
    }
    
    export namespace c {
        import b = a.b;
        export var x: b.c = new b.c();
    }
    
    export var d = new c.b.c();
                         ~
!!! error TS2339: Property 'b' does not exist on type 'typeof c'.